fix: Set height for tech icons to avoid overlapping issue on mobile

--- a/portfolio/static/test-main.css
+++ b/portfolio/static/test-main.css
@@ -33,10 +33,6 @@
 		min-width: 100%;
 	}
 
-	section {
-		min-width: 100%;
-	}
-
 	#name {
 		font-size: 1.5em;
 		align-self: center;
@@ -78,13 +74,13 @@
 		min-width: 350px;
 	}
 
-	section {
-		min-width: 280px;
-	}
-
 	#name {
 		font-size: 2em;
 		margin: 10px 5px 10px 5px;
+	}
+
+	footer {
+		min-width: 350px;
 	}
 }
 
@@ -122,13 +118,13 @@
 		min-width: 350px;
 	}
 
-	section {
-		min-width: 280px;
-	}
-
 	#name {
 		font-size: 2em;
 		margin: 10px 5px 10px 5px;
+	}
+
+	footer {
+		min-width: 350px;
 	}
 }
 
@@ -184,7 +180,7 @@ img {
 	width: 100%;
 }
 
-section {
+.shaded {
 	background: rgba(0, 0, 0, 0.7);
 	color: white;
 	margin: 1px 1px 1px 1px;
@@ -223,9 +219,34 @@ a:visited {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
-	height: 50px;
 }
 
 .tech-icon {
 	margin: 0 1px 0 1px;
+	height: 50px;
+}
+
+#bio {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#bio-pic {
+	float: left;
+	max-width: 150px;
+	max-height: 150px;
+}
+
+#bio-text {
+	float: none;
+}
+
+footer {
+	width: 100%;
+	height: 50px;
+	background: rgba(0, 0, 0, 0.7);
+	display: flex;
+	opacity: 0;
+	animation: fadein 3s 0s 1;
+	animation-fill-mode: forwards;
 }
